--- a/back_workspace/java_workspace/example/pom.xml
+++ b/back_workspace/java_workspace/example/pom.xml
@@ -32,5 +32,12 @@
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>5.4.1</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+	<dependency>
+	    <groupId>com.itextpdf</groupId>
+	    <artifactId>itextpdf</artifactId>
+	    <version>5.5.12</version>
+	</dependency>
   </dependencies>
 </project>
