--- a/back_workspace/javaee_workspace/BoardApp/pom.xml
+++ b/back_workspace/javaee_workspace/BoardApp/pom.xml
@@ -24,5 +24,11 @@
 	    <artifactId>mysql-connector-j</artifactId>
 	    <version>8.0.33</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis</artifactId>
+	    <version>3.4.6</version>
+	</dependency>
   </dependencies>
 </project>
