--- a/back_workspace/javaee_workspace/memberapp/src/main/webapp/WEB-INF/web.xml
+++ b/back_workspace/javaee_workspace/memberapp/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <servlet>
-  	<servlet-name>registServlet</servlet-name>
-  	<servlet-class>com.sinse.boradapp.controller.RegistServlet</servlet-class>
+  	<servlet-name>loginServlet</servlet-name>
+  	<servlet-class>com.sinse.memberapp.controller.LoginServlet</servlet-class>
   </servlet>
   
   <servlet-mapping>
-  	<servlet-name>registServlet</servlet-name>
-  	<url-pattern>/0703/news/test</url-pattern>
+  	<servlet-name>loginServlet</servlet-name>
+  	<url-pattern>/member/login</url-pattern>
   </servlet-mapping>
 </web-app>
