--- a/back_workspace/javaee_workspace/mvcapp/pom.xml
+++ b/back_workspace/javaee_workspace/mvcapp/pom.xml
@@ -31,5 +31,16 @@
 	    <artifactId>logback-core</artifactId>
 	    <version>1.2.11</version>
 	</dependency>
+	<dependency>
+	    <groupId>com.mysql</groupId>
+	    <artifactId>mysql-connector-j</artifactId>
+	    <version>8.0.33</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+	<dependency>
+	    <groupId>org.mybatis</groupId>
+	    <artifactId>mybatis</artifactId>
+	    <version>3.4.6</version>
+	</dependency>
   </dependencies>
 </project>
