--- a/back_workspace/javaee_workspace/mall/src/main/webapp/WEB-INF/web.xml
+++ b/back_workspace/javaee_workspace/mall/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,17 @@
   		<filter-name>encodingFilter</filter-name>
   		<url-pattern>/*</url-pattern>
   	</filter-mapping>
+  	
+  	<!-- Login Session Check Filter -->
+  	<filter>
+  		<filter-name>loginCheckFilter</filter-name>
+  		<filter-class>mall.util.LoginCheckFilter</filter-class>
+  	</filter>
+  	
+  	<filter-mapping>
+  		<filter-name>loginCheckFilter</filter-name>
+  		<url-pattern>/shop/*</url-pattern>
+  	</filter-mapping>
   
 	<!-- 모든 요청은 1차적으로 하나의 서블릿으로 처리해야 하므로, 하나의 진입점이 되는 서블릿을 정의 -->
 	<servlet>
