--- a/back_workspace/javaee_workspace/mymodel2/src/main/webapp/WEB-INF/web.xml
+++ b/back_workspace/javaee_workspace/mymodel2/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,8 @@
    		<param-value>WEB-INF/spring/root-context.json</param-value>
    </context-param>
    
+   <!-- 톰켓이 가동될 때의 이벤트를 감지하여 이 시점에 어떤 작업을 하고자 한다면
+   		리스너에서 ServletContext를 제어하면 된다. -->
    <listener>
    		<listener-class>mymodel2.web.context.ContextLoaderListener</listener-class>
    		
