--- a/back_workspace/boot_workspace/chatroomapp/build.gradle
+++ b/back_workspace/boot_workspace/chatroomapp/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation("com.mysql:mysql-connector-j:8.0.33")
     //Mybatis import
     implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4")
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
+    implementation("org.springframework.boot:spring-boot-starter-websocket:3.5.4")
 }
 
 tasks.named('test') {
