--- a/back_workspace/boot_workspace/chatroomapp/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/chatroomapp/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8989
 
 logging.level.root=WARN
 logging.level.com.sinse.chatroomapp.controller=DEBUG
+logging.level.com.sinse.chatroomapp.model=DEBUG
 
 #tymeleaf setting
 spring.thymeleaf.cache=false
