--- a/back_workspace/boot_workspace/electroshop/build.gradle
+++ b/back_workspace/boot_workspace/electroshop/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa:3.5.4")
     // https://mvnrepository.com/artifact/com.mysql/mysql-connector-j
     implementation("com.mysql:mysql-connector-j:8.0.33")
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket
+    implementation("org.springframework.boot:spring-boot-starter-websocket:3.5.4")
 }
 
 tasks.named('test') {
