--- a/back_workspace/boot_workspace/electroshop/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/electroshop/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=9999
 logging.level.root=WARN
 logging.level.com.sinse.electroshop.controller=DEBUG
 logging.level.com.sinse.electroshop.model=DEBUG
+logging.level.com.sinse.electroshop.websocket=DEBUG
 
 #thymeleaf setting
 spring.thymeleaf.cache=false
