파일 업로드(싱글)

--- a/back_workspace/boot_workspace/electroshop/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/electroshop/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Image Upload Path Setting
+spring.servlet.multipart.max-file-size=3MB
+app.upload.dir=c:/boot/upload
