jwt accesstoken, refreshtoken

--- a/back_workspace/boot_workspace/JwtLogin/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/JwtLogin/src/main/resources/application.properties
@@ -7,6 +7,7 @@ logging.level.root=WARN
 logging.level.com.sinse.jwtlogin.controller=DEBUG
 logging.level.com.sinse.jwtlogin.model=DEBUG
 logging.level.org.springframework.security=DEBUG
+logging.level.com.sinse.jwtlogin.filter=DEBUG
 
 #DataSource Setting
 spring.datasource.url=jdbc:mysql://localhost:3306/electroshop
@@ -19,3 +20,12 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#JWT Secret Key (User Custom)
+jwt.secret=dlfwjrrpgkrhehsaksgdlqjfrhtlvek.
+
+#JWT valid time (15min)
+jwt.expiration=900000
+
+#refresh JWT valid time (7days)
+jwt.refresh.expiration=604800000
