--- a/back_workspace/boot_workspace/JwtLogin/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/JwtLogin/src/main/resources/application.properties
@@ -29,3 +29,9 @@ jwt.expiration=900000
 
 #refresh JWT valid time (7days)
 jwt.refresh.expiration=604800000
+
+#Redis Setting
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=60000
+spring.cache.type=redis
