--- a/back_workspace/boot_workspace/JwtRedis/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/JwtRedis/src/main/resources/application.properties
@@ -24,3 +24,10 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 #spring.data.redis.password=1234
+
+
+#JWT Custom Setting
+app.jwt.issure=JwtRedis
+app.jwt.secret=0123456789abcdef0123456789abcdef
+app.jwt.access-minutes=15
+app.jwt.refresh-days=14
