--- a/back_workspace/boot_workspace/JwtRedis/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/JwtRedis/src/main/resources/application.properties
@@ -7,6 +7,8 @@ logging.level.root=WARN
 logging.level.com.sinse.jwtredis.controller=DEBUG
 logging.level.com.sinse.jwtredis.model=DEBUG
 logging.level.com.sinse.jwtredis.security=DEBUG
+logging.level.com.sinse.jwtredis.filter=DEBUG
+logging.level.com.sinse.jwtredis.util=DEBUG
 
 #DataSource Setting
 spring.datasource.url=jdbc:mysql://localhost:3306/restaurant
