--- a/back_workspace/boot_workspace/studySpringJWT/build.gradle
+++ b/back_workspace/boot_workspace/studySpringJWT/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
     implementation("org.springframework.boot:spring-boot-starter:3.5.4")
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.5.4'
+    // 메일 전송 위한 라이브러리 추가
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
