--- a/back_workspace/boot_workspace/studySpringJWT/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/studySpringJWT/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.port=9999
 logging.level.root=WARN
 logging.level.com.example.studyspringjwt.controller=DEBUG
 logging.level.com.example.studyspringjwt.jwt=DEBUG
+logging.level.com.example.studyspringjwt.mail=DEBUG
 
 #DataSource Setting
 spring.datasource.url=jdbc:mysql://localhost:3306/spring
@@ -26,3 +27,13 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.timeout=6000
 spring.cache.type=redis
+
+#Gmail SMTP Setting
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=?????
+spring.mail.password=Google ????? ??
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
