--- a/back_workspace/boot_workspace/studySpringJWT/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/studySpringJWT/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.cache.type=redis
 #Gmail SMTP Setting
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=?????
+spring.mail.username=apple092958@gmail.com
 spring.mail.password=Google ????? ??
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
