--- a/back_workspace/boot_workspace/shop_workspace/Gateway/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/shop_workspace/Gateway/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.cloud.gateway.server.webflux.routes[0].id=productservice
 spring.cloud.gateway.server.webflux.routes[0].uri=http://localhost:7771
 spring.cloud.gateway.server.webflux.routes[0].predicates[0].name=Path
 spring.cloud.gateway.server.webflux.routes[0].predicates[0].args.pattern=/products/**
+
+spring.cloud.gateway.server.webflux.routes[0].predicates[1].name=Path
+spring.cloud.gateway.server.webflux.routes[0].predicates[1].args.pattern=/products
 #-------------------------------------------
 # Order Service
 #-------------------------------------------
@@ -24,6 +27,8 @@ spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:7772
 spring.cloud.gateway.server.webflux.routes[1].predicates[0].name=Path
 spring.cloud.gateway.server.webflux.routes[1].predicates[0].args.pattern=/orders/**
 
+spring.cloud.gateway.server.webflux.routes[1].predicates[1].name=Path
+spring.cloud.gateway.server.webflux.routes[1].predicates[1].args.pattern=/orders
 #-------------------------------------------
 # Member Service
 #-------------------------------------------
