--- a/back_workspace/boot_workspace/shop_workspace/productservice/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/shop_workspace/productservice/src/main/resources/application.properties
@@ -4,3 +4,18 @@ server.port=7771
 
 #Eureka ??? ?????? ??
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+logging.level.root=WARN
+logging.level.com.sinse.productservice.controller=DEBUG
+
+#DataSource Setting
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant
+spring.datasource.username=chef
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=10
+
+#JPA / Hibernate Setting
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
