--- a/back_workspace/boot_workspace/shop_workspace/productservice/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/shop_workspace/productservice/src/main/resources/application.properties
@@ -7,6 +7,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 logging.level.root=WARN
 logging.level.com.sinse.productservice.controller=DEBUG
+logging.level.com.sinse.productservice.model=DEBUG
 
 #DataSource Setting
 spring.datasource.url=jdbc:mysql://localhost:3306/restaurant
@@ -19,3 +20,6 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Fileupload store directory
+file.upload-dir=C:/dev/upload
