--- a/back_workspace/boot_workspace/shop_workspace/Gateway/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/shop_workspace/Gateway/src/main/resources/application.properties
@@ -15,24 +15,18 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.cloud.gateway.server.webflux.routes[0].id=productservice
 spring.cloud.gateway.server.webflux.routes[0].uri=http://localhost:7771
 spring.cloud.gateway.server.webflux.routes[0].predicates[0].name=Path
-spring.cloud.gateway.server.webflux.routes[0].predicates[0].args.pattern=/products/**
-
-spring.cloud.gateway.server.webflux.routes[0].predicates[1].name=Path
-spring.cloud.gateway.server.webflux.routes[0].predicates[1].args.pattern=/products
+spring.cloud.gateway.server.webflux.routes[0].predicates[0].args.pattern=/productapp/**
 #-------------------------------------------
 # Order Service
 #-------------------------------------------
 spring.cloud.gateway.server.webflux.routes[1].id=OrderService
 spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:7772
 spring.cloud.gateway.server.webflux.routes[1].predicates[0].name=Path
-spring.cloud.gateway.server.webflux.routes[1].predicates[0].args.pattern=/orders/**
-
-spring.cloud.gateway.server.webflux.routes[1].predicates[1].name=Path
-spring.cloud.gateway.server.webflux.routes[1].predicates[1].args.pattern=/orders
+spring.cloud.gateway.server.webflux.routes[1].predicates[0].args.pattern=/orderapp/**
 #-------------------------------------------
 # Member Service
 #-------------------------------------------
 spring.cloud.gateway.server.webflux.routes[2].id=MemberService
 spring.cloud.gateway.server.webflux.routes[2].uri=http://localhost:7773
 spring.cloud.gateway.server.webflux.routes[2].predicates[0].name=Path
-spring.cloud.gateway.server.webflux.routes[2].predicates[0].args.pattern=/members/**
+spring.cloud.gateway.server.webflux.routes[2].predicates[0].args.pattern=/memberapp/**
