--- a/back_workspace/boot_workspace/studySpringJWT/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/studySpringJWT/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.cache.type=redis
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=apple092958@gmail.com
-spring.mail.password=Google ????? ??
+spring.mail.password=aslc mwtr shxh xvyi
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
