oauth 로그인 환경설정

--- a/back_workspace/boot_workspace/shop_workspace/Gateway/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/shop_workspace/Gateway/src/main/resources/application.properties
@@ -30,3 +30,7 @@ spring.cloud.gateway.server.webflux.routes[2].id=MemberService
 spring.cloud.gateway.server.webflux.routes[2].uri=http://localhost:7773
 spring.cloud.gateway.server.webflux.routes[2].predicates[0].name=Path
 spring.cloud.gateway.server.webflux.routes[2].predicates[0].args.pattern=/memberapp/**
+
+# Spring Gateway? /meberapp/**? ??? ??? MemberService? ??? ? URL ????(memberapp) ???.
+spring.cloud.gateway.server.webflux.routes[2].filters[0].name=StripPrefix
+spring.cloud.gateway.server.webflux.routes[2].filters[0].args.parts=1
