--- a/back_workspace/boot_workspace/shop_workspace/MemberService/build.gradle
+++ b/back_workspace/boot_workspace/shop_workspace/MemberService/build.gradle
@@ -1,4 +1,4 @@
-plugins {
+                                                plugins {
     id 'java'
     id 'org.springframework.boot' version '3.5.5'
     id 'io.spring.dependency-management' version '1.1.7'
@@ -35,6 +35,12 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     //Eureka 클라이언트로 등록
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    // spring-boot-starter-oauth2-client
+    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
+    // spring-boot-starter-security
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 dependencyManagement {
