--- a/back_workspace/boot_workspace/shop_workspace/MemberService/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/shop_workspace/MemberService/src/main/resources/application.properties
@@ -4,3 +4,96 @@ server.port=7773
 
 #Eureka ??? ?????? ??
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#DataSource Setting
+spring.datasource.url=jdbc:mysql://localhost:3306/member
+spring.datasource.username=chef
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=10
+
+#JPA / Hibernate Setting
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#----------------------------------------------------------------
+# React 클라이언트에서 로그인 인증 성공 후 보게될 url
+#----------------------------------------------------------------
+app.frontend.url=http://localhost:5173
+app.oauth2.success-redirect=${app.frontend.url}/oauth2/redirect
+
+#----------------------------------------------------------------
+# OAuth 클라이언트 공통 URL (google, naver, kakao)
+#----------------------------------------------------------------
+app.backend.url=http://localhost:7777
+
+#----------------------------------------------------------------
+# 1) Google
+#----------------------------------------------------------------
+# google 개발자 콘솔에 등록한 callback url
+spring.security.oauth2.client.registration.google.redirect-uri=${app.backend.url}/memberapp/login/oauth2/code/google
+# Client Id / Client Securet-Key
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
+# 접근 범위
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+
+#----------------------------------------------------------------
+# 2) Kakao
+#----------------------------------------------------------------
+spring.security.oauth2.client.registration.kakao.redirect-uri=${app.backend.url}/memberapp/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.client-id=
+spring.security.oauth2.client.registration.kakao.client-secret=
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+#----------------------------------------------------------------
+# 2) Naver
+#----------------------------------------------------------------
+spring.security.oauth2.client.registration.naver.redirect-uri=${app.backend.url}/memberapp/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.client-id=
+spring.security.oauth2.client.registration.naver.client-secret=
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email
+# Naver 측은 쉼표가 아닌 공백문자로 scope 값을 구분하기 원한다.(Naver api 측에서 원함)
+spring.security.oauth2.client.registration.naver.scope-separator=
+spring.security.oauth2.client.registration.naver.client-name=naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=id
+
+
+#---------------------------------------------------------------------------------------------------------------------
+#   Spring의 oauth 라이브러리는 OAuth2의 인증 과정 대부분을 자동화 시켜준다.
+#   따라서 개발자는 provider로 부터 전달된 token을 받는 시점부터 Service 객체를 재정의하여 처리...
+#   1) React 앱이 제공하는 로그인 화면에서 사용자가 google, naver, kakao 프로바이더 버튼을 클릭함
+#       이때 boot 서버에서는 OAuth2AuthorizationRequestRedirectFilter라는 내부 필터가 application.properties 파일을 읽어들여
+#       client_id, redirect_uri, scope 등을 조합하여 실제적으로 provider url로 자동 리다이렉트 한다.
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#----------------------------------------------------------------------------------------------------------------------
