한글깨짐 수정

--- a/back_workspace/boot_workspace/shop_workspace/MemberService/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/shop_workspace/MemberService/src/main/resources/application.properties
@@ -25,25 +25,25 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #----------------------------------------------------------------
-# React í´ë¼ì´ì¸í¸ìì ë¡ê·¸ì¸ ì¸ì¦ ì±ê³µ í ë³´ê²ë  url
+# # React 클라이언트에서 로그인 인증 성공 후 보게될 url
 #----------------------------------------------------------------
 app.frontend.url=http://localhost:5173
 app.oauth2.success-redirect=${app.frontend.url}/oauth2/redirect
 
 #----------------------------------------------------------------
-# OAuth í´ë¼ì´ì¸í¸ ê³µíµ URL (google, naver, kakao)
+# OAuth 클라이언트 공통 URL (google, naver, kakao)
 #----------------------------------------------------------------
 app.backend.url=http://localhost:7777
 
 #----------------------------------------------------------------
 # 1) Google
 #----------------------------------------------------------------
-# google ê°ë°ì ì½ìì ë±ë¡í callback url
+# google 개발자 콘솔에 등록한 callback url
 spring.security.oauth2.client.registration.google.redirect-uri=${app.backend.url}/memberapp/login/oauth2/code/google
 # Client Id / Client Securet-Key
 spring.security.oauth2.client.registration.google.client-id=
 spring.security.oauth2.client.registration.google.client-secret=
-# ì ê·¼ ë²ì
+# 접근 범위
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 #----------------------------------------------------------------
@@ -70,7 +70,7 @@ spring.security.oauth2.client.registration.naver.client-id=
 spring.security.oauth2.client.registration.naver.client-secret=
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=name,email
-# Naver ì¸¡ì ì¼íê° ìë ê³µë°±ë¬¸ìë¡ scope ê°ì êµ¬ë¶íê¸° ìíë¤.(Naver api ì¸¡ìì ìí¨)
+# Naver 측은 쉼표가 아닌 공백문자로 scope 값을 구분하기 원한다.(Naver api 측에서 원함)
 spring.security.oauth2.client.registration.naver.scope-separator=
 spring.security.oauth2.client.registration.naver.client-name=naver
 
@@ -81,26 +81,10 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
 
 #---------------------------------------------------------------------------------------------------------------------
-#   Springì oauth ë¼ì´ë¸ë¬ë¦¬ë OAuth2ì ì¸ì¦ ê³¼ì  ëë¶ë¶ì ìëí ìì¼ì¤ë¤.
-#   ë°ë¼ì ê°ë°ìë providerë¡ ë¶í° ì ë¬ë tokenì ë°ë ìì ë¶í° Service ê°ì²´ë¥¼ ì¬ì ìíì¬ ì²ë¦¬...
-#   1) React ì±ì´ ì ê³µíë ë¡ê·¸ì¸ íë©´ìì ì¬ì©ìê° google, naver, kakao íë¡ë°ì´ë ë²í¼ì í´ë¦­í¨
-#       ì´ë boot ìë²ììë OAuth2AuthorizationRequestRedirectFilterë¼ë ë´ë¶ íí°ê° application.properties íì¼ì ì½ì´ë¤ì¬
-#       client_id, redirect_uri, scope ë±ì ì¡°í©íì¬ ì¤ì ì ì¼ë¡ provider urlë¡ ìë ë¦¬ë¤ì´ë í¸ íë¤.
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
+#   Spring의 oauth 라이브러리는 OAuth2의 인증 과정 대부분을 자동화 시켜준다.
+#   따라서 개발자는 provider로 부터 전달된 token을 받는 시점부터 Service 객체를 재정의하여 처리...
+#   1) React 앱이 제공하는 로그인 화면에서 사용자가 google, naver, kakao 프로바이더 버튼을 클릭함
+#       이때 boot 서버에서는 OAuth2AuthorizationRequestRedirectFilter라는 내부 필터가 application.properties 파일을 읽어들여
+#       client_id, redirect_uri, scope 등을 조합하여 실제적으로 provider url로 자동 리다이렉트 한다.
 #
 #----------------------------------------------------------------------------------------------------------------------
