--- a/back_workspace/boot_workspace/JwtRedis/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/JwtRedis/src/main/resources/application.properties
@@ -11,8 +11,8 @@ logging.level.com.sinse.jwtredis.filter=DEBUG
 logging.level.com.sinse.jwtredis.util=DEBUG
 
 #DataSource Setting
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant
-spring.datasource.username=chef
+spring.datasource.url=jdbc:mysql://localhost:3306/fantry_local_sh
+spring.datasource.username=sohee
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
