--- a/back_workspace/boot_workspace/demo_security/src/main/resources/application.properties
+++ b/back_workspace/boot_workspace/demo_security/src/main/resources/application.properties
@@ -30,15 +30,15 @@ cors.allowed-origins=http://localhost:3000,http://localhost:5173
 #Gmail SMTP Setting
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=apple092958@gmail.com
-spring.mail.password=aslc mwtr shxh xvyi
-spring.mail.protocol=smtp
+spring.mail.username=
+spring.mail.password=
+spring.mail.protocol=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 #Security- Encryption Custom Setting
-spring.jwt.secret=dkahffkrmsidakrwldjzldkfrpanjdi!@#$
+spring.jwt.secret=
 
 # Actuator
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
